@@ -2,6 +2,7 @@
 CHANGELOG for Homebox for Drupal
 
 7.x-2.x-dev xxxx/xx/xx
+  - #946206 by rv0 | flecus: Fixed Changed the color of the block is not saved.
 
 7.x-2.x-beta3 2011/02/17
   - by brianV: Remove unneeded hook_update_n() implementations for D5-D6 update.
